2012-02-13 Riccardo Mottola <rm@gnu.org> for Sebastian Reitenbach

	* Resources/MainMenu-GNUstep.gsmarkup
	Fix menu equivalents.

	* PreferencesController.m
	Remember 7zip executable


2012-02-13 Riccardo Mottola <rm@gnu.org>

	Initial GAP check-in
	License changed to GPLv2 in accordance with the original author
	Packed resources into Resources subdirectory